[gd_scene load_steps=5 format=3 uid="uid://culof44ypm2u"]

[ext_resource type="Script" path="res://vampire_survivors/game.gd" id="1_aiquj"]
[ext_resource type="PackedScene" uid="uid://obsvqw8kcgg" path="res://vampire_survivors/player.tscn" id="2_oekym"]
[ext_resource type="PackedScene" uid="uid://ds7ex6w70riel" path="res://vampire_survivors/trees/pine_tree.tscn" id="3_k7jxk"]

[sub_resource type="Curve2D" id="Curve2D_cp6e5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1055, -697, 0, 0, 0, 0, 1057, -697, 0, 0, 0, 0, 1057, 671, 0, 0, 0, 0, -1055, 663, 0, 0, 0, 0, -1055, -689)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_aiquj")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("2_oekym")]

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_cp6e5")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1055, -697)

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.439216)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -107.0
offset_right = 358.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 124
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -32

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PineTree" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(226, 951)

[node name="PineTree2" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(315, 1003)

[node name="PineTree3" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(150, 1047)

[node name="PineTree4" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(1490, 254)

[node name="PineTree5" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(1637, 384)

[node name="PineTree6" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(-741, 313)

[node name="PineTree7" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(-852, 370)

[node name="PineTree8" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(-893, 229)

[node name="PineTree9" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(-346, -667)

[node name="PineTree10" parent="." instance=ExtResource("3_k7jxk")]
position = Vector2(-573, -543)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
